compiler/testData/multiplatform/simpleNoImplKeywordOnTopLevelFunction/output.txt
-- Common --
Exit code: OK
Output:

-- JVM --
Exit code: COMPILATION_ERROR
Output:
compiler/testData/multiplatform/simpleNoImplKeywordOnTopLevelFunction/jvm.kt:3:5: error: declaration must be marked with 'actual'.
fun foo(s: String): Array<CharSequence?> = arrayOf(s)
    ^^^
